k8s/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: INFLUXROUTE
    nginx.ingress.kubernetes.io/session-cookie-expires: "86400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "86400"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
  name: influxdb-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: influxdb.34.90.168.150.nip.io
    http:
      paths:
      - backend:
          service:
            name: influxdb-proxy
            port:
              number: 80
        path: /
        pathType: Prefix
